--- a/menudigital/index.html
+++ b/menudigital/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MonFruits</title>
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@1,8..144,700&family=Roboto:ital@1&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <body>
     <header>
-        <H1>MonFruits</H1>
+        <H1>Mon<span>Fruits</span></H1>
         <p>Aberto todos os dias. 8h-17h</p>
     </header>
 
@@ -21,17 +24,36 @@
                     <h3>Banana</h3>
                     <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 </div>
-                <strong> R$ 5,00</strong>
+                <strong>R$ 5,00</strong>
             </li>
             <li>
                 <div class="details">
                     <h3>Maça</h3>
                     <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 </div>
-                <strong> R$ 3,00</strong>
+                <strong>R$ 3,00</strong>
             </li>
         </ul>
     </section>
 
+    <section>
+        <h2>Bebidas</h2>
+        <ul>
+            <li>
+                <div class="details">
+                    <h3>Vitamina de Banana</h3>
+                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+                <strong>R$ 8,00</strong>
+            </li>
+            <li>
+                <div class="details">
+                    <h3>Vitamina de Maça</h3>
+                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+                <strong>R$ 7,00</strong>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
